New Index + liga-liga (test)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+$(document).ready(function(){ $('seletor-da-div').fadeIn('slow');});
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Game of Logistic</title>
+	<title>Game of Logistics</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,31 +14,20 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body onload='ready'>
-	<!-- <div id='explicacao'>
-		<div>
-			<p id='texto-explicacao'>O ponto de exclamação, também conhecido como ponto de admiração (!), é um sinal de pontuação normalmente utilizado após uma interjeição ou no fim de uma frase. É usado para indicar uma expressão, uma enfatização de alguma coisa, ou para a identificação de sentimentos fortes ou de volume alto (gritos), e tem a função de representar, por escrita, a entonação de exclamação de um enunciado.</p> 
-			<a href="#" onclick='fecharExplicacao()'>Fechar explicação</a>
-		</div>
-	</div>
-	<div id='desistir-box'>
-		<div>
-			<p>Se você desistir, as respostas irão aparecer na tela. Entretando, você perderá seu progresso e voltará ao início do jogo.</p> 
-			<a href="#" onclick='fecharExplicacao()'>Voltar ao jogo</a>
-			<a id='desistirSim' href="#" onclick='desistirSim()'>Desistir</a>
-		</div>
-	</div> -->
 	<div id='screen-container'>
 		<span class='span-title'>
-			<a href="#">
+			<a href="http://gameoflogistics.github.io">
 				Game of Logistics
 			</a>
 		</span>
 		<div class="menu">
-			<li class="item-menu"><a href="http://dynx.com.br">Quiz</a></li>
+			<li class="item-menu"><a href="http://gameoflogistics.github.io">Quiz</a></li>
 			<!-- <li class="item-menu"><a href="#">Jogo da Memória</a></li> -->
-			<li class="item-menu"><a href="#">Liga-Liga</a></li>
+			<li class="item-menu"><a href="../liga-liga.html">Liga-Liga</a></li>
 		</div>
 		<div id='game-container'>
 			<div class="container-container">
