--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-$(document).ready(function(){ $('seletor-da-div').fadeIn('slow');});
-
+<!-- $(document).ready(function(){ $('seletor-da-div').fadeIn('slow');}); -->
 <!DOCTYPE html>
 <html>
 <head>
