--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="menu">
 			<li class="item-menu"><a href="http://gameoflogistics.github.io">Quiz</a></li>
 			<!-- <li class="item-menu"><a href="#">Jogo da Memória</a></li> -->
-			<li class="item-menu"><a href="../liga-liga.html">Liga-Liga</a></li>
+			<li class="item-menu"><a href="../liga-liga">Liga-Liga</a></li>
 		</div>
 		<div id='game-container'>
 			<div class="container-container">
