--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body onload='ready'>
+	<script>
+		$(document).ready(function(){
+			$('.q0').fadeIn('slow');
+		});
+	</script>
 	<div id='screen-container'>
 		<span class='span-title'>
 			<a href="http://gameoflogistics.github.io">
