--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body onload='ready'>
 	<script>
 		$(document).ready(function(){
-			$('#q0').fadeIn('slow');
+			$('q0').fadeIn('slow');
 		});
 	</script>
 	<div id='screen-container'>
