--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body onload='ready'>
 	<script>
-		$(document).ready(function(){
-			$(".quiz-container").fadeIn("slow");
+		$(document).ready(function({
+			$('#q0').fadeIn('slow');
 		});
 	</script>
 	<div id='screen-container'>
