--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
-<body onload='ready'>
+<body>
 	<script>
-		$(document).ready(function({
+		$(document).ready(function(){
 			$('#q0').fadeIn('slow');
 		});
 	</script>
