--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			$('#q0').fadeIn('slow');
+			$('.quiz-container').fadeIn('slow');
 		});
 	</script>
 </body>
