--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			$('.questao').fadeIn('slow');
+			$('#q0 .hidden').fadeIn(1000).removeClass('hidden');;
 		});
 	</script>
 </body>
