--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="quiz-container1" id='q1'>
+				<div class="quiz-container1" id='q1' class='hidden'>
 					<div class="shadow" id="shadow-correto1">
 						<div class="shadow-container">
 							<div class="box-resultadoParcial" id="correto1">
