--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div id='game-container'>
 			<div class="container-container">
-				<div class="quiz-container" id='q0'>
+				<div class="quiz-container" id='q0' class='hidden'>
 					<div class="instrucao">Este é um quiz sobre embalagens, parte do conteúdo de logística.
 						<br>Leia com atenção e selecione apenas uma alternativa correta para cada questão!</br>
 					</div>
@@ -41,7 +41,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="quiz-container1" id='q1' class='hidden'>
+				<div class="quiz-container1" id='q1'>
 					<div class="shadow" id="shadow-correto1">
 						<div class="shadow-container">
 							<div class="box-resultadoParcial" id="correto1">
