--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div id='game-container'>
 			<div class="container-container">
-				<div class="quiz-container" id='q0' class='hidden'>
+				<div class="quiz-container" id='q0'>
 					<div class="instrucao">Este é um quiz sobre embalagens, parte do conteúdo de logística.
 						<br>Leia com atenção e selecione apenas uma alternativa correta para cada questão!</br>
 					</div>
@@ -1226,7 +1226,7 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			$('#q0 .hidden').fadeIn(1000).removeClass('hidden');;
+			$('#q0 .quiz-container').fadeIn(1000).removeClass('quiz-container');;
 		});
 	</script>
 </body>
