--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			$('#q0 .quiz-container').fadeIn(1000).removeClass('quiz-container');;
+			$('div.quiz-container').fadeIn(1000).removeClass('quiz-container');;
 		});
 	</script>
 </body>
