--- a/liga.html
+++ b/liga.html
@@ -79,7 +79,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>1</b> de <b>10</b></div>
-					<div class="questao"><b>1</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>1</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content'>
 						<div class='new-wrapper'>
 							<div class='emb1'></div>
@@ -118,7 +118,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>2</b> de <b>10</b></div>
-					<div class="questao"><b>2</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>2</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content1'>
 						<div class='new-wrapper'>
 							<div class='emb2'></div>
@@ -156,7 +156,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>3</b> de <b>10</b></div>
-					<div class="questao"><b>3</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>3</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content'>
 						<div class='new-wrapper'>
 							<div class='emb3'></div>
@@ -194,7 +194,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>4</b> de <b>10</b></div>
-					<div class="questao"><b>4</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>4</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content3'>
 						<div class='new-wrapper'>
 							<div class='emb4'></div>
@@ -233,7 +233,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>5</b> de <b>10</b></div>
-					<div class="questao"><b>5</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>5</b>. Como podem ser classificadas a segunda maior e a maior caixa da figura abaixo quanto ao nível de embalagem?</div>
 					<div id='content4'>
 						<div class='new-wrapper'>
 							<div class='emb5'></div>
@@ -272,7 +272,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>6</b> de <b>10</b></div>
-					<div class="questao"><b>6</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>6</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content5'>
 						<div class='new-wrapper'>
 							<div class='emb6'></div>
@@ -311,7 +311,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>7</b> de <b>10</b></div>
-					<div class="questao"><b>7</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>7</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content6'>
 						<div class='new-wrapper'>
 							<div class='emb7'></div>
@@ -350,7 +350,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>8</b> de <b>10</b></div>
-					<div class="questao"><b>8</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>8</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content7'>
 						<div class='new-wrapper'>
 							<div class='emb8'></div>
@@ -389,7 +389,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>9</b> de <b>10</b></div>
-					<div class="questao"><b>9</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>9</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content8'>
 						<div class='new-wrapper'>
 							<div class='emb9'></div>
@@ -428,7 +428,7 @@
 					</div>
 					<div class="instrucao">Leia com atenção e selecione apenas uma alternativa correta para cada questão!</div>
 					<div class="question-count">Questão <b>10</b> de <b>10</b></div>
-					<div class="questao"><b>10</b>. Qual a forma geométrica que melhor descreve o professor João?</div>
+					<div class="questao"><b>10</b>. Descubra o nome da embalagem mostrada e ligue corretamente esse nome à foto!</div>
 					<div id='content9'>
 						<div class='new-wrapper'>
 							<div class='emb10'></div>
