--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 					</div>
 					<div class='radio'>
 						<label>
-							<input type='radio' name='q5' id="a18" value='1'><a> Existe um tipo de caixa de madeira chamada Caixa Torito.</a></input>
+							<input type='radio' name='q5' id="a18" value='1'><a> Existe um tipo de caixa de madeira chamada Caixa Torino.</a></input>
 						</label>
 					</div>
 					<div class='radio'>
