--- a/liga.html
+++ b/liga.html
@@ -447,7 +447,7 @@
 								<span>Tem certeza de que quer voltar para a página inicial?</span>
 								<div class='buttons'>
 									<ul>
-										<li id = 'responder1'><a heref='liga.html'>Voltar!</a></li>
+										<li id = 'responder1'><a href='liga.html'>Voltar!</a></li>
 									</ul>
 								</div>
 							</div>
